Fix logo hidden text on Firefox
Use bootstrap’s .text-hide() mixin.

Fix #11

--- a/static/less/global/header.less
+++ b/static/less/global/header.less
@@ -32,10 +32,8 @@ header.global, header.global.slim {
 
             a {
                 .size(@logo-img-width, 48px);
+                .text-hide();
 
-                text-indent: 100%;
-                white-space: nowrap;
-                overflow: hidden;
                 background-image: url(@logo-img-path);
                 background-size: contain;
                 background-repeat: no-repeat;
